fixed overlap, added footer, added screen sizing media, globalised h1 font size

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -48,6 +48,7 @@ body {
 h1 {
     color: #F9DEC9;
     font-family: the_cat;
+    font-size: 100px;
 }
 
 h2 {
@@ -70,6 +71,9 @@ p {
     background-size: cover;
     z-index: 1;
     position: relative;
+    width: 100%;
+    display: block;
+    height: auto;
 }
 
 .head h1 {
@@ -77,7 +81,6 @@ p {
     text-align: left;
     color: #F9DEC9;
     font-family: the_cat;
-    font-size: 125px;
     letter-spacing: 5PX;
     text-shadow: 7.5px 7.5px 10px#0A0011;
     transition: 1s;
@@ -160,15 +163,16 @@ p {
 .about {
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: auto;
     background-image: url(../IMG/backround_abt.jpg);
     position: relative;
+    width: 100%;
+    display: block;
 }
 
 .about h1 {
     font-family: the_cat;
     color: #F9DEC9;
-    font-size: 100px;
     margin-left: 10%;
     text-align: left;
     text-decoration:underline;
@@ -190,12 +194,14 @@ p {
     background-image: url(../IMG/backround_work.jpg);
     padding: 80px;
     position: relative;
+    width: 100%;
+    display: block;
+    height: auto;
 }
 
 .works h1 {
     font-family: the_cat;
     color: #F9DEC9;
-    font-size: 100px;
     margin-left: 10%;
     text-align: left;
     text-decoration:underline;
@@ -271,7 +277,7 @@ p {
     border-radius: 10px;
     box-shadow: 7.5px 7.5px 10px#0A0011;
     text-align: center;
-
+    
 }
 
 .project img {
@@ -379,7 +385,6 @@ p {
 .soc_info h1 {
     font-family: the_cat;
     color: #F9DEC9;
-    font-size: 100px;
     margin-left: 10%;
     text-align: left;
     text-decoration:underline;
@@ -479,5 +484,40 @@ ul li:hover a::before {
 @media (max-width: 1500px) {
     .soc_view .insta {
         display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    .soc_icons {
+        display: block; /* Make the links appear below each other */
+        width: 100px;
+    }
+}
+
+/* Footer */
+.footer {
+    background-image: url(../IMG/backfill.png);
+    position: relative;
+    height: auto;
+    width: 100%;
+    display: block;
+}
+
+.footer p {
+    text-align: left;
+    margin-left: 10%;
+}
+
+@media (max-width: 700px) {
+    .footer p {
+        margin-left: 0;
+        text-align: left;
+        font-size: 20px;
+    }
+    p {
+        font-size: 25px;
+    }
+    h1 {
+        font-size: 75px;
     }
 }
